// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatReport report relativeness 1`] = `
"Custom Relative Report for range [34m2022-07-01[39m - [34m2022-07-04[39m
NAME    PRODUCTIVITY   
[33mzero[39m    [38;2;150;0;0m[1m■■■■■■■ 0.00%[22m[39m  
[33mfirst[39m   [38;2;150;0;0m[1m■■■■■■■ 10.00%[22m[39m 
[33msecond[39m  [38;2;255;125;125m[1m■■■■■■■ 20.00%[22m[39m 
[33mthird[39m   [38;2;255;125;125m[1m■■■■■■■ 30.00%[22m[39m 
[33mfourth[39m  [38;2;255;255;75m[1m■■■■■■■ 40.00%[22m[39m 
[33mfifth[39m   [38;2;255;255;75m[1m■■■■■■■ 50.00%[22m[39m 
[33msixth[39m   [38;2;125;255;125m[1m■■■■■■■ 60.00%[22m[39m 
[33mseventh[39m [38;2;125;255;125m[1m■■■■■■■ 70.00%[22m[39m 
[33meight[39m   [38;2;0;180;0m[1m■■■■■■■ 80.00%[22m[39m 
[33mninth[39m   [38;2;0;180;0m[1m■■■■■■■ 90.00%[22m[39m 
[33mtenth[39m   [38;2;0;180;0m[1m■■■■■■■ 100.00%[22m[39m"
`;

exports[`formatReport report relativeness 2`] = `
"Custom Absolute Report for range [34m2022-07-01[39m - [34m2022-07-04[39m
NAME    PRODUCTIVITY   
[33mzero[39m    [38;2;150;0;0m[1m■■■■■■■ 0.00%[22m[39m  
[33mfirst[39m   [38;2;150;0;0m[1m■■■■■■■ 10.00%[22m[39m 
[33msecond[39m  [38;2;255;125;125m[1m■■■■■■■ 20.00%[22m[39m 
[33mthird[39m   [38;2;255;125;125m[1m■■■■■■■ 30.00%[22m[39m 
[33mfourth[39m  [38;2;255;255;75m[1m■■■■■■■ 40.00%[22m[39m 
[33mfifth[39m   [38;2;255;255;75m[1m■■■■■■■ 50.00%[22m[39m 
[33msixth[39m   [38;2;125;255;125m[1m■■■■■■■ 60.00%[22m[39m 
[33mseventh[39m [38;2;125;255;125m[1m■■■■■■■ 70.00%[22m[39m 
[33meight[39m   [38;2;0;180;0m[1m■■■■■■■ 80.00%[22m[39m 
[33mninth[39m   [38;2;0;180;0m[1m■■■■■■■ 90.00%[22m[39m 
[33mtenth[39m   [38;2;0;180;0m[1m■■■■■■■ 100.00%[22m[39m"
`;

exports[`formatReport report with all choices 1`] = `
"Custom Absolute Report for range [34m2022-07-01[39m - [34m2022-07-04[39m
NAME    PRODUCTIVITY   
[33mzero[39m    [38;2;150;0;0m[1m■■■■■■■ 0.00%[22m[39m  
[33mfirst[39m   [38;2;150;0;0m[1m■■■■■■■ 10.00%[22m[39m 
[33msecond[39m  [38;2;255;125;125m[1m■■■■■■■ 20.00%[22m[39m 
[33mthird[39m   [38;2;255;125;125m[1m■■■■■■■ 30.00%[22m[39m 
[33mfourth[39m  [38;2;255;255;75m[1m■■■■■■■ 40.00%[22m[39m 
[33mfifth[39m   [38;2;255;255;75m[1m■■■■■■■ 50.00%[22m[39m 
[33msixth[39m   [38;2;125;255;125m[1m■■■■■■■ 60.00%[22m[39m 
[33mseventh[39m [38;2;125;255;125m[1m■■■■■■■ 70.00%[22m[39m 
[33meight[39m   [38;2;0;180;0m[1m■■■■■■■ 80.00%[22m[39m 
[33mninth[39m   [38;2;0;180;0m[1m■■■■■■■ 90.00%[22m[39m 
[33mtenth[39m   [38;2;0;180;0m[1m■■■■■■■ 100.00%[22m[39m"
`;

exports[`formatReport report with all choices 2`] = `
"Daily Absolute Report for range [34m2022-07-01[39m - [34m2022-07-04[39m
NAME    PRODUCTIVITY   
[33mzero[39m    [38;2;150;0;0m[1m■■■■■■■ 0.00%[22m[39m  
[33mfirst[39m   [38;2;150;0;0m[1m■■■■■■■ 10.00%[22m[39m 
[33msecond[39m  [38;2;255;125;125m[1m■■■■■■■ 20.00%[22m[39m 
[33mthird[39m   [38;2;255;125;125m[1m■■■■■■■ 30.00%[22m[39m 
[33mfourth[39m  [38;2;255;255;75m[1m■■■■■■■ 40.00%[22m[39m 
[33mfifth[39m   [38;2;255;255;75m[1m■■■■■■■ 50.00%[22m[39m 
[33msixth[39m   [38;2;125;255;125m[1m■■■■■■■ 60.00%[22m[39m 
[33mseventh[39m [38;2;125;255;125m[1m■■■■■■■ 70.00%[22m[39m 
[33meight[39m   [38;2;0;180;0m[1m■■■■■■■ 80.00%[22m[39m 
[33mninth[39m   [38;2;0;180;0m[1m■■■■■■■ 90.00%[22m[39m 
[33mtenth[39m   [38;2;0;180;0m[1m■■■■■■■ 100.00%[22m[39m"
`;

exports[`formatReport report with all choices 3`] = `
"Weekly Absolute Report for range [34m2022-07-01[39m - [34m2022-07-04[39m
NAME    PRODUCTIVITY   
[33mzero[39m    [38;2;150;0;0m[1m■■■■■■■ 0.00%[22m[39m  
[33mfirst[39m   [38;2;150;0;0m[1m■■■■■■■ 10.00%[22m[39m 
[33msecond[39m  [38;2;255;125;125m[1m■■■■■■■ 20.00%[22m[39m 
[33mthird[39m   [38;2;255;125;125m[1m■■■■■■■ 30.00%[22m[39m 
[33mfourth[39m  [38;2;255;255;75m[1m■■■■■■■ 40.00%[22m[39m 
[33mfifth[39m   [38;2;255;255;75m[1m■■■■■■■ 50.00%[22m[39m 
[33msixth[39m   [38;2;125;255;125m[1m■■■■■■■ 60.00%[22m[39m 
[33mseventh[39m [38;2;125;255;125m[1m■■■■■■■ 70.00%[22m[39m 
[33meight[39m   [38;2;0;180;0m[1m■■■■■■■ 80.00%[22m[39m 
[33mninth[39m   [38;2;0;180;0m[1m■■■■■■■ 90.00%[22m[39m 
[33mtenth[39m   [38;2;0;180;0m[1m■■■■■■■ 100.00%[22m[39m"
`;

exports[`formatReport report with all choices 4`] = `
"Monthly Absolute Report for range [34m2022-07-01[39m - [34m2022-07-04[39m
NAME    PRODUCTIVITY   
[33mzero[39m    [38;2;150;0;0m[1m■■■■■■■ 0.00%[22m[39m  
[33mfirst[39m   [38;2;150;0;0m[1m■■■■■■■ 10.00%[22m[39m 
[33msecond[39m  [38;2;255;125;125m[1m■■■■■■■ 20.00%[22m[39m 
[33mthird[39m   [38;2;255;125;125m[1m■■■■■■■ 30.00%[22m[39m 
[33mfourth[39m  [38;2;255;255;75m[1m■■■■■■■ 40.00%[22m[39m 
[33mfifth[39m   [38;2;255;255;75m[1m■■■■■■■ 50.00%[22m[39m 
[33msixth[39m   [38;2;125;255;125m[1m■■■■■■■ 60.00%[22m[39m 
[33mseventh[39m [38;2;125;255;125m[1m■■■■■■■ 70.00%[22m[39m 
[33meight[39m   [38;2;0;180;0m[1m■■■■■■■ 80.00%[22m[39m 
[33mninth[39m   [38;2;0;180;0m[1m■■■■■■■ 90.00%[22m[39m 
[33mtenth[39m   [38;2;0;180;0m[1m■■■■■■■ 100.00%[22m[39m"
`;

exports[`formatReport report with all choices 5`] = `
"Yearly Absolute Report for range [34m2022-07-01[39m - [34m2022-07-04[39m
NAME    PRODUCTIVITY   
[33mzero[39m    [38;2;150;0;0m[1m■■■■■■■ 0.00%[22m[39m  
[33mfirst[39m   [38;2;150;0;0m[1m■■■■■■■ 10.00%[22m[39m 
[33msecond[39m  [38;2;255;125;125m[1m■■■■■■■ 20.00%[22m[39m 
[33mthird[39m   [38;2;255;125;125m[1m■■■■■■■ 30.00%[22m[39m 
[33mfourth[39m  [38;2;255;255;75m[1m■■■■■■■ 40.00%[22m[39m 
[33mfifth[39m   [38;2;255;255;75m[1m■■■■■■■ 50.00%[22m[39m 
[33msixth[39m   [38;2;125;255;125m[1m■■■■■■■ 60.00%[22m[39m 
[33mseventh[39m [38;2;125;255;125m[1m■■■■■■■ 70.00%[22m[39m 
[33meight[39m   [38;2;0;180;0m[1m■■■■■■■ 80.00%[22m[39m 
[33mninth[39m   [38;2;0;180;0m[1m■■■■■■■ 90.00%[22m[39m 
[33mtenth[39m   [38;2;0;180;0m[1m■■■■■■■ 100.00%[22m[39m"
`;

exports[`formatReport report with all choices 6`] = `
"7-days Absolute Report for range [34m2022-07-01[39m - [34m2022-07-04[39m
NAME    PRODUCTIVITY   
[33mzero[39m    [38;2;150;0;0m[1m■■■■■■■ 0.00%[22m[39m  
[33mfirst[39m   [38;2;150;0;0m[1m■■■■■■■ 10.00%[22m[39m 
[33msecond[39m  [38;2;255;125;125m[1m■■■■■■■ 20.00%[22m[39m 
[33mthird[39m   [38;2;255;125;125m[1m■■■■■■■ 30.00%[22m[39m 
[33mfourth[39m  [38;2;255;255;75m[1m■■■■■■■ 40.00%[22m[39m 
[33mfifth[39m   [38;2;255;255;75m[1m■■■■■■■ 50.00%[22m[39m 
[33msixth[39m   [38;2;125;255;125m[1m■■■■■■■ 60.00%[22m[39m 
[33mseventh[39m [38;2;125;255;125m[1m■■■■■■■ 70.00%[22m[39m 
[33meight[39m   [38;2;0;180;0m[1m■■■■■■■ 80.00%[22m[39m 
[33mninth[39m   [38;2;0;180;0m[1m■■■■■■■ 90.00%[22m[39m 
[33mtenth[39m   [38;2;0;180;0m[1m■■■■■■■ 100.00%[22m[39m"
`;

exports[`formatReport report with all choices 7`] = `
"14-days Absolute Report for range [34m2022-07-01[39m - [34m2022-07-04[39m
NAME    PRODUCTIVITY   
[33mzero[39m    [38;2;150;0;0m[1m■■■■■■■ 0.00%[22m[39m  
[33mfirst[39m   [38;2;150;0;0m[1m■■■■■■■ 10.00%[22m[39m 
[33msecond[39m  [38;2;255;125;125m[1m■■■■■■■ 20.00%[22m[39m 
[33mthird[39m   [38;2;255;125;125m[1m■■■■■■■ 30.00%[22m[39m 
[33mfourth[39m  [38;2;255;255;75m[1m■■■■■■■ 40.00%[22m[39m 
[33mfifth[39m   [38;2;255;255;75m[1m■■■■■■■ 50.00%[22m[39m 
[33msixth[39m   [38;2;125;255;125m[1m■■■■■■■ 60.00%[22m[39m 
[33mseventh[39m [38;2;125;255;125m[1m■■■■■■■ 70.00%[22m[39m 
[33meight[39m   [38;2;0;180;0m[1m■■■■■■■ 80.00%[22m[39m 
[33mninth[39m   [38;2;0;180;0m[1m■■■■■■■ 90.00%[22m[39m 
[33mtenth[39m   [38;2;0;180;0m[1m■■■■■■■ 100.00%[22m[39m"
`;

exports[`formatReport report with all choices 8`] = `
"30-days Absolute Report for range [34m2022-07-01[39m - [34m2022-07-04[39m
NAME    PRODUCTIVITY   
[33mzero[39m    [38;2;150;0;0m[1m■■■■■■■ 0.00%[22m[39m  
[33mfirst[39m   [38;2;150;0;0m[1m■■■■■■■ 10.00%[22m[39m 
[33msecond[39m  [38;2;255;125;125m[1m■■■■■■■ 20.00%[22m[39m 
[33mthird[39m   [38;2;255;125;125m[1m■■■■■■■ 30.00%[22m[39m 
[33mfourth[39m  [38;2;255;255;75m[1m■■■■■■■ 40.00%[22m[39m 
[33mfifth[39m   [38;2;255;255;75m[1m■■■■■■■ 50.00%[22m[39m 
[33msixth[39m   [38;2;125;255;125m[1m■■■■■■■ 60.00%[22m[39m 
[33mseventh[39m [38;2;125;255;125m[1m■■■■■■■ 70.00%[22m[39m 
[33meight[39m   [38;2;0;180;0m[1m■■■■■■■ 80.00%[22m[39m 
[33mninth[39m   [38;2;0;180;0m[1m■■■■■■■ 90.00%[22m[39m 
[33mtenth[39m   [38;2;0;180;0m[1m■■■■■■■ 100.00%[22m[39m"
`;

exports[`formatReport report with all choices 9`] = `
"90-days Absolute Report for range [34m2022-07-01[39m - [34m2022-07-04[39m
NAME    PRODUCTIVITY   
[33mzero[39m    [38;2;150;0;0m[1m■■■■■■■ 0.00%[22m[39m  
[33mfirst[39m   [38;2;150;0;0m[1m■■■■■■■ 10.00%[22m[39m 
[33msecond[39m  [38;2;255;125;125m[1m■■■■■■■ 20.00%[22m[39m 
[33mthird[39m   [38;2;255;125;125m[1m■■■■■■■ 30.00%[22m[39m 
[33mfourth[39m  [38;2;255;255;75m[1m■■■■■■■ 40.00%[22m[39m 
[33mfifth[39m   [38;2;255;255;75m[1m■■■■■■■ 50.00%[22m[39m 
[33msixth[39m   [38;2;125;255;125m[1m■■■■■■■ 60.00%[22m[39m 
[33mseventh[39m [38;2;125;255;125m[1m■■■■■■■ 70.00%[22m[39m 
[33meight[39m   [38;2;0;180;0m[1m■■■■■■■ 80.00%[22m[39m 
[33mninth[39m   [38;2;0;180;0m[1m■■■■■■■ 90.00%[22m[39m 
[33mtenth[39m   [38;2;0;180;0m[1m■■■■■■■ 100.00%[22m[39m"
`;

exports[`formatReport report with all choices 10`] = `
"180-days Absolute Report for range [34m2022-07-01[39m - [34m2022-07-04[39m
NAME    PRODUCTIVITY   
[33mzero[39m    [38;2;150;0;0m[1m■■■■■■■ 0.00%[22m[39m  
[33mfirst[39m   [38;2;150;0;0m[1m■■■■■■■ 10.00%[22m[39m 
[33msecond[39m  [38;2;255;125;125m[1m■■■■■■■ 20.00%[22m[39m 
[33mthird[39m   [38;2;255;125;125m[1m■■■■■■■ 30.00%[22m[39m 
[33mfourth[39m  [38;2;255;255;75m[1m■■■■■■■ 40.00%[22m[39m 
[33mfifth[39m   [38;2;255;255;75m[1m■■■■■■■ 50.00%[22m[39m 
[33msixth[39m   [38;2;125;255;125m[1m■■■■■■■ 60.00%[22m[39m 
[33mseventh[39m [38;2;125;255;125m[1m■■■■■■■ 70.00%[22m[39m 
[33meight[39m   [38;2;0;180;0m[1m■■■■■■■ 80.00%[22m[39m 
[33mninth[39m   [38;2;0;180;0m[1m■■■■■■■ 90.00%[22m[39m 
[33mtenth[39m   [38;2;0;180;0m[1m■■■■■■■ 100.00%[22m[39m"
`;

exports[`formatReport report with all choices 11`] = `
"365-days Absolute Report for range [34m2022-07-01[39m - [34m2022-07-04[39m
NAME    PRODUCTIVITY   
[33mzero[39m    [38;2;150;0;0m[1m■■■■■■■ 0.00%[22m[39m  
[33mfirst[39m   [38;2;150;0;0m[1m■■■■■■■ 10.00%[22m[39m 
[33msecond[39m  [38;2;255;125;125m[1m■■■■■■■ 20.00%[22m[39m 
[33mthird[39m   [38;2;255;125;125m[1m■■■■■■■ 30.00%[22m[39m 
[33mfourth[39m  [38;2;255;255;75m[1m■■■■■■■ 40.00%[22m[39m 
[33mfifth[39m   [38;2;255;255;75m[1m■■■■■■■ 50.00%[22m[39m 
[33msixth[39m   [38;2;125;255;125m[1m■■■■■■■ 60.00%[22m[39m 
[33mseventh[39m [38;2;125;255;125m[1m■■■■■■■ 70.00%[22m[39m 
[33meight[39m   [38;2;0;180;0m[1m■■■■■■■ 80.00%[22m[39m 
[33mninth[39m   [38;2;0;180;0m[1m■■■■■■■ 90.00%[22m[39m 
[33mtenth[39m   [38;2;0;180;0m[1m■■■■■■■ 100.00%[22m[39m"
`;
